# Task

./: CMakeLists.txt
Task/: Sum.cpp  Sum.h
Task.Tests/: Sum.Tests.cpp  main.cpp
